<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Music Server</string>
    <string name="button_settings">Settings</string>
    <string name="button_stop">Stop</string>
    <string name="button_pause">Pause</string>
    <string name="button_next">Next</string>
    <string name="button_prev">Previous</string>
    <string name="button_shutdown">Shutdown</string>
    <string name="button_play">Play</string>
</resources>
